--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,107 +7,157 @@
     tools:context=".Actividades.MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
-    <include
-        android:id="@+id/include2"
-        layout="@layout/toolbar"></include>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="68dp"
-        android:layout_height="17dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="59dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="20dp"
         android:text="Peso:"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="59dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toStartOf="@+id/Id_Peso"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="529dp"
         android:text="Altura:"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="96dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/Id_Altura"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="106dp"
-        android:layout_height="17dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="52dp"
         android:text="Genero:"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="158dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintEnd_toStartOf="@+id/genero"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="104dp"
-        android:layout_height="17dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="36dp"
         android:text="Edad:"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="218dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toTopOf="@+id/Id_calcular"
+        app:layout_constraintEnd_toStartOf="@+id/Id_Edad"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="68dp"
+        android:layout_width="0dp"
         android:layout_height="19dp"
+        android:layout_marginEnd="39dp"
         android:text="Kg"
-        tools:layout_editor_absoluteX="236dp"
-        tools:layout_editor_absoluteY="59dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBaseline_toBaselineOf="@+id/Id_Peso"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Id_Peso"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="83dp"
-        android:layout_height="19dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="107dp"
+        android:layout_marginBottom="41dp"
         android:text="Cm"
-        tools:layout_editor_absoluteX="221dp"
-        tools:layout_editor_absoluteY="98dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Id_Altura"
+        app:layout_constraintTop_toBottomOf="@+id/Id_Peso"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/Id_Peso"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="10dp"
         android:ems="10"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Id_Altura"
-        android:layout_width="83dp"
+        android:layout_width="0dp"
         android:layout_height="17dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="41dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="100dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        app:layout_constraintEnd_toStartOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/Id_Edad"
-        android:layout_width="104dp"
+        android:layout_width="0dp"
         android:layout_height="19dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginEnd="133dp"
+        android:layout_marginBottom="84dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="213dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toBottomOf="@+id/Id_calcular"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/genero"
+        tools:ignore="MissingConstraints" />
 
     <Spinner
 
         android:id="@+id/genero"
-        android:layout_width="106dp"
+        android:layout_width="0dp"
         android:layout_height="57dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginBottom="45dp"
         android:entries="@array/genero"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="80dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toTopOf="@+id/textView6"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/Id_calcular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="331dp"
         android:text="Calcular"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="281dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/Id_Edad"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:ignore="MissingConstraints" />
 </android.support.constraint.ConstraintLayout>
