--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,163 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Actividades.MainActivity"
     tools:layout_editor_absoluteY="25dp">
+    <include layout="@layout/toolbar"/>
 
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="59dp"
-        android:layout_marginTop="59dp"
-        android:layout_marginEnd="19dp"
-        android:layout_marginBottom="20dp"
-        android:text="Peso:"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
-        app:layout_constraintEnd_toStartOf="@+id/Id_Peso"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="78dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="529dp"
-        android:text="Altura:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/Id_Altura"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="59dp"
-        android:layout_marginEnd="9dp"
-        android:layout_marginBottom="52dp"
-        android:text="Genero:"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toStartOf="@+id/genero"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="59dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="36dp"
-        android:text="Edad:"
-        app:layout_constraintBottom_toTopOf="@+id/Id_calcular"
-        app:layout_constraintEnd_toStartOf="@+id/Id_Edad"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginEnd="39dp"
-        android:text="Kg"
-        app:layout_constraintBaseline_toBaselineOf="@+id/Id_Peso"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Id_Peso"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="107dp"
-        android:layout_marginBottom="41dp"
-        android:text="Cm"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/Id_Altura"
-        app:layout_constraintTop_toBottomOf="@+id/Id_Peso"
-        tools:ignore="MissingConstraints" />
-
-    <EditText
-        android:id="@+id/Id_Peso"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="10dp"
-        android:ems="10"
-        android:inputType="number"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView6"
-        app:layout_constraintEnd_toStartOf="@+id/textView5"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="98dp"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/Id_Altura"
-        android:layout_width="0dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="41dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
-        app:layout_constraintEnd_toStartOf="@+id/textView6"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="74dp"
+            android:layout_height="match_parent"
+            android:text="Peso:" />
 
-    <EditText
-        android:id="@+id/Id_Edad"
-        android:layout_width="0dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="83dp"
-        android:layout_marginEnd="133dp"
-        android:layout_marginBottom="84dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/Id_calcular"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toTopOf="@+id/genero"
-        tools:ignore="MissingConstraints" />
+        <EditText
+            android:id="@+id/Id_Peso"
+            android:layout_width="170dp"
+            android:layout_height="match_parent"
+            android:inputType="number" />
 
-    <Spinner
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="42dp"
+            android:layout_height="match_parent"
+            android:text="Kg" />
+    </LinearLayout>
 
-        android:id="@+id/genero"
-        android:layout_width="0dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="172dp"
-        android:layout_marginBottom="45dp"
-        android:entries="@array/genero"
-        app:layout_constraintBottom_toBottomOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toTopOf="@+id/textView6"
-        tools:ignore="MissingConstraints" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="182dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="73dp"
+            android:layout_height="match_parent"
+            android:text="Altura:" />
+
+        <EditText
+            android:id="@+id/Id_Altura"
+            android:layout_width="177dp"
+            android:layout_height="match_parent"
+            android:inputType="number" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="38dp"
+            android:layout_height="match_parent"
+            android:text="Cm" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="253dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="74dp"
+            android:layout_height="match_parent"
+            android:text="Genero:" />
+
+        <Spinner
+            android:id="@+id/genero"
+            android:layout_width="178dp"
+            android:layout_height="match_parent"
+            android:entries="@array/genero" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="190dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="74dp"
+            android:layout_height="match_parent"
+            android:text="Edad:" />
+
+        <EditText
+            android:id="@+id/Id_Edad"
+            android:layout_width="181dp"
+            android:layout_height="match_parent"
+            android:inputType="number" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/Id_calcular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="26dp"
-        android:layout_marginBottom="331dp"
-        android:text="Calcular"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/Id_Edad"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        tools:ignore="MissingConstraints" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="101dp"
+        android:text="Calcular" />
+</RelativeLayout>
