--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".Actividades.MainActivity"
     tools:layout_editor_absoluteY="25dp">
-    <include layout="@layout/toolbar"/>
+
+    <include
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -90,8 +92,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="190dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="327dp"
         android:orientation="horizontal">
 
         <TextView
@@ -113,6 +115,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="101dp"
+        android:layout_marginBottom="257dp"
         android:text="Calcular" />
 </RelativeLayout>
