--- a/app/src/main/res/layout/activity2.xml
+++ b/app/src/main/res/layout/activity2.xml
@@ -4,105 +4,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Actividades.Activity2">
+    tools:context=".Actividades.Activity2"
+    tools:layout_editor_absoluteY="25dp">
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="53dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:text="Tu Masa Corporal Es: "
-        app:layout_constraintBottom_toTopOf="@+id/editTuEstado"
-        app:layout_constraintEnd_toStartOf="@+id/editTuMasa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/editTuMasa"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="53dp"
-        android:layout_marginEnd="138dp"
-        android:layout_marginBottom="87dp"
+        android:layout_marginEnd="146dp"
         android:text="texto"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTuPesoIdeal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="17dp"
         android:text="Estado"
-        app:layout_constraintBottom_toBottomOf="@+id/editTuEstado"
-        app:layout_constraintEnd_toStartOf="@+id/editTuEstado"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editTuEstado" />
+        tools:layout_editor_absoluteY="78dp" />
 
     <TextView
         android:id="@+id/editTuEstado"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="101dp"
-        android:layout_marginBottom="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="146dp"
+        android:text="222"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        tools:layout_editor_absoluteY="78dp" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="27dp"
         android:text="Tu peso ideal esta entre "
-        app:layout_constraintBottom_toTopOf="@+id/editTuRiesgo"
-        app:layout_constraintEnd_toStartOf="@+id/editTuPesoIdeal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTuEstado" />
+        tools:layout_editor_absoluteY="118dp" />
 
     <TextView
         android:id="@+id/editTuPesoIdeal"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="458dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="146dp"
+        android:text="222"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/editTuMasa" />
+        tools:layout_editor_absoluteY="118dp" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="23dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="385dp"
         android:text="Rieso:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editTuRiesgo"
-        app:layout_constraintEnd_toStartOf="@+id/editTuRiesgo"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/editTuRiesgo"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="405dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="146dp"
+        android:layout_marginBottom="392dp"
+        android:text="22"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/guardarSql"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="79dp"
+        android:layout_marginBottom="292dp"
+        android:text="Guardar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/listaSql"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="74dp"
+        android:layout_marginBottom="292dp"
+        android:text="Ver Lista"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
